# back2basics

./: LICENSE  pyproject.toml
notebooks/: BIAS_VARIANCE.md  CLEAN_MLE_AND_LOSS.ipynb  CLEAN_SPEAKER_NOTES.ipynb  FROM_FEATURES_TO_RESIDUALS.md  HUBER_LOSS.md  KEY_FORMULAS.md  MLE_LAPLACE.md  MLE_SPEAKER_NOTES.md  MLE_and_LOSS.ipynb  SPEAKER_NOTES.md  presentation.ipynb
src/: __init__.py  bias_variance_plot.py  data_generation.py  demonstrations.py  gradient_descent_viz.py  main.py  mle.py  mle_and_loss.ipynb  mle_widget.py  model_training.py  models.py  multivariate_viz.py  residual_viz.py  theme.py  theory.py  utils.py  visualization.py
src/generated_sketch/: __init__.py  data_generation.py  main.py  metrics.py  theory.py
